--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Ben Heubl
 description:      Describe your website here.
-disqus_shortname: hpstrtheme
+disqus_shortname: Ben Heubl
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
